<resources>
    <string name="app_name">Shake Shack</string>
    <string name="facebook_app_id">1763767896974538</string>
    <string name="fb_login_protocol_scheme">fb1763767896974538</string>
    <string name="asap_ordering">Next Available : ASAP</string>
    <string name="non_asap_ordering">Next Available : NON-ASAP</string>
    <string name="try_it_now">TRY IT NOW</string>
    <string name="pick_up">Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="order_now">ORDER NOW</string>
    <string name="submit">Submit</string>
    <string name="try_different_location_button">Try a different location</string>
    <string name="yes_am_picking_up_location_button">Yes, I\'m picking up from there</string>
    <string name="no_shack_near_this_location">Oops, it seems there\'s no Shack near this location :(</string>
    <string name="no_location_near_detail">But good to know that you\'re looking for us there! Maybe one day we open one around!</string>
    <string name="choose_another_shack">Choose another Shack</string>
    <string name="far_from_you_location_title">Picking up from %1$s?</string>
    <string name="far_from_you_location_message">  <![CDATA[It seems that <b><font color=#000000>%1$s</font></b> is far from your current location.]]>  </string>
    <string name="just_to_confirm">Just to confirm…</string>
    <string name="delivery_home">Home</string>
    <string name="delivery_work">Work</string>
    <string name="learn_more">LEARN MORE</string>
    <string name="cancel">Cancel</string>
    <string name="view_all">View all</string>
    <string name="none_selected">None selected</string>
    <string name="none">None</string>
    <string name="generic_title_and_description">%1$s: %2$s</string>
    <string name="additional_cost">+$%1$s</string>
    <string name="city_state_or_zip_code">City, State, or ZIP Code</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="password_forgot">Forgot?</string>
    <string name="asterisks_password_placeholder">********</string>
    <string name="tells_us_your_email">Tell us your email</string>
    <string name="next">Next</string>
    <string name="lets_create_your_account">Let\'s create your account!</string>
    <string name="create_password">Create password</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign out</string>
    <string name="payment_methods">Payment methods</string>
    <string name="signed_in">Signed In</string>
    <string name="expired">Expired</string>
    <string name="default_payment_method">Default</string>
    <string name="payment_method_last_four_with_separator">%1$s%2$s</string>
    <string name="addresses">Addresses</string>
    <string name="address_second_line_with_instructions">%1$s, %2$s</string>
    <string name="allergens">Allergens</string>
    <string name="order_history">Order History</string>
    <string name="order_details_title">Order details</string>
    <string name="order_placed">Order placed</string>
    <string name="delivery_or_pickup_type_title">Delivery or pickup type</string>
    <string name="order_number_title">Order number</string>
    <string name="reorder">REORDER</string>
    <string name="clear_tray_and_reorder">Clear tray and reorder?</string>
    <string name="reordering_will_clear_tray_warning">Reordering this past order will clear your menu selections and clear the pickup or delivery choices from your current tray.</string>
    <string name="yes_reorder">Yes, reorder</string>
    <string name="order_was_canceled">Order was canceled</string>
    <string name="password_update_success_message">Your password was updated with success!</string>
    <string name="invalid_current_password">The current password is invalid.</string>
    <string name="get_support_link">Issues with your order? <u>Get support</u></string>
    <string name="menu">MENU</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="burgers">BURGERS</string>
    <string name="chicken">CHICKEN</string>
    <string name="fries">CRINKLE CUT FRIES</string>
    <string name="flat_top_dogs">FLAT-TOP DOGS</string>
    <string name="shakes_frozen_custard">SHAKES &amp; FROZEN CUSTARD</string>
    <string name="drinks">DRINKS</string>
    <string name="order_catering_title">Order Catering</string>
    <string name="for_your_office_lunch">for your office lunch</string>
    <string name="stand_for_something">Stand For Something Good</string>
    <string name="location">Location</string>
    <string name="careers">Careers</string>
    <string name="retail">Retail</string>
    <string name="contact_us">Contact Us</string>
    <string name="health_and_safety_updates">Health &amp; Safety Updates</string>
    <string name="download_allergen_details">Download Allergen Details</string>
    <string name="gift_card">Gift Cards</string>
    <string name="blog">Blog</string>
    <string name="investors">Investors</string>
    <string name="california_transparency">California Transparency in Supply</string>
    <string name="privacy">Privacy</string>
    <string name="do_not_sell_info">Do Not Sell My Personal Information</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="lets_get_appy">Let\'s get app-y!</string>
    <string name="order_ahead">Order ahead for touch-free pick-up!</string>
    <string name="copyright_footer">©2004–2020 Shake Shack. All Rights Reserved.\n\nSome information on this site may vary slightly by location and in stadium, event venues and international Shacks.</string>
    <string name="your_favorite_list_title">YOUR FAVORITES</string>
    <string name="empty_favourite_nothing_here">Nothing here…</string>
    <string name="empty_favorite_you_havent_added">You haven\'t added anything to your favorites\n
    so far. Let\'s start thar right now</string>
    <string name="view_menu_button">View menu</string>
    <string name="add">Add</string>
    <string name="make_it_even_better">Make it even better</string>
    <string name="thats_it_button">That\'s it</string>
    <string name="lets_wrap_up">Okay, let\'s\n wrap up</string>
    <string name="delivery_detail_title">Delivery Detail</string>
    <string name="street_number_and_name">Street number and name</string>
    <string name="delivery_instruction">Delivery instruction</string>
    <string name="contact_info_title">Contact info</string>
    <string name="email_address_for_delivery">Email address</string>
    <string name="payment_title">Payment</string>
    <string name="tip_title">Tip</string>
    <string name="tip_description">100% of this reward goes to the courier</string>
    <string name="review_order">Review your order</string>
    <string name="finish_your_order">Finish up\n your order</string>
    <string name="payment_method">Payment method</string>
    <string name="pay_button">Pay</string>
    <string name="image_description">Image Description</string>
    <string name="lets_try_pick_up">Let’s try pickup then</string>
    <string name="profile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name_last_name_phone">%1$s %2$s, %3$s</string>
    <string name="birthday">Birthday</string>
    <string name="email">Email</string>
    <string name="messaging">Messaging</string>
    <string name="receive_sms_from_ss">Receive SMS from Shake Shack</string>
    <string name="receive_marketing_emails">Receive marketing e-mails</string>
    <string name="more_details">More Details</string>
    <string name="more_details_description">Let us know you more, and we will prepare some special offer for you</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Non-Binary</item>
    </string-array>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="non_binary">Non-Binary</string>
    <string-array name="kids">
        <item>Yup</item>
        <item>Nope</item>
    </string-array>
    <string name="yup">Yup</string>
    <string name="nope">Nope</string>
    <string-array name="pets">
        <item>Dog</item>
        <item>Cat</item>
        <item>Fish</item>
        <item>Rock</item>
    </string-array>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="fish">Fish</string>
    <string name="rock">Rock</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="change">Change</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="show_password"><u>Show</u></string>
    <string name="hide_password"><u>Hide</u></string>
    <string name="don_t_have_an_account_create_one">Don\'t have an account? Create one now!</string>
    <string name="did_you_forget_your_password">Did you forget your password?</string>
    <string name="auth_token">"Auth token: "</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password can not be empty</string>
    <string name="login_credentials_do_not_match">The password and email address do not match.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="forgotten_password_message">Please enter your email address and we will send you an email with a temporary password.</string>
    <string name="send">Send</string>
    <string name="check_your_email_title">Check your email</string>
    <string name="email_sent_message">We\'ve sent you an email with a temporary password.</string>
    <string name="close">Close</string>
    <string name="send_it_again">Send it again</string>
    <string name="close_button_description">Close button</string>
    <string name="car_ok">OK</string>
    <string name="car_cancel">CANCEL</string>
    <string name="car_color_white">White</string>
    <string name="car_color_black">Black</string>
    <string name="car_color_grey">Grey</string>
    <string name="car_color_blue">Blue</string>
    <string name="car_color_red">Red</string>
    <string name="car_color_brown">Brown</string>
    <string name="car_color_green">Green</string>
    <string name="car_color_yellow">Yellow</string>
    <string name="car_color_gold_tan_silver">Gold/Tan/Silver</string>
    <string name="car_type_sedan">Sedan</string>
    <string name="car_type_suv_crossover">SUV/Crossover</string>
    <string name="car_type_van_minivan">Van/Minivan</string>
    <string name="car_type_truck_pickup">Truck/Pickup</string>
    <string name="car_type_hatchback">Hatchback</string>
    <string name="car_type_convertible">Convertible</string>
    <string name="car_type_sportscar">Sportscar</string>
    <string name="something_wrong_with_order_title">We\'re sorry something was wrong with your order. </string>
    <string name="provide_more_details_info">Please provide us more details so we can fix it.</string>
    <string name="additional_issue_details">Additional Issue Details</string>
    <string name="refund_success_info_text">Don\'t worry - we\'ve submitted your order for refund and hope you will give us another chance to get it right next time</string>
    <string name="start_new_order">START A NEW ORDER</string>
    <string name="need_further_assistance">Need further assistance?</string>
    <string name="visit_contact_us_info">Visit our Contact Us page and continue the conversation by phone or email.\n\n<u>Contact Us</u></string>
</resources>