<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/size_28dp">

    <TextView
        android:id="@+id/forgotten_password_title"
        style="@style/ShakeShackTextView.BodyNormal.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/size_32dp"
        android:layout_marginTop="@dimen/size_28dp"
        android:layout_toStartOf="@id/close_button"
        android:text="@string/forgotten_password" />

    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/size_20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/image_description"
        android:padding="@dimen/size_10dp"
        android:scaleType="center"
        android:src="@drawable/ic_close" />


    <TextView
        android:id="@+id/forgot_password_message"
        style="@style/ShakeShackTextView.BodyNormal.Grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgotten_password_title"
        android:layout_marginHorizontal="@dimen/size_28dp"
        android:layout_marginTop="@dimen/size_50dp"
        android:text="@string/forgotten_password_message" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_address_input_layout"
        style="@style/ShakeShackTextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password_message"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="@dimen/size_28dp"
        android:layout_marginTop="@dimen/size_50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:hint="@string/email_address"
            android:imeActionLabel="@string/done"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/send_button"
        android:layout_below="@id/email_address_input_layout"
        android:layout_alignParentStart="true"
        android:minHeight="60dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_button"
        style="@style/ShakeShackButton.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/size_32dp"
        android:enabled="false"
        android:text="@string/send" />

</RelativeLayout>