<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/close_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_30dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close_button_description"
        android:padding="@dimen/size_10dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/something_wrong_with_order_title"
        style="@style/ShakeShackTextView.HeadingH2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_30dp"
        android:layout_marginTop="@dimen/size_40dp"
        android:text="@string/something_wrong_with_order_title"
        app:layout_constraintTop_toBottomOf="@id/close_bottom_sheet" />

    <TextView
        android:id="@+id/refund_success_info_text"
        style="@style/ShakeShackTextView.BodyNormal.Grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_30dp"
        android:text="@string/refund_success_info_text"
        app:layout_constraintTop_toBottomOf="@+id/something_wrong_with_order_title" />

    <View
        android:id="@+id/refund_success_section_separator"
        android:layout_width="0dp"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:background="@color/grey_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refund_success_info_text" />

    <TextView
        android:id="@+id/need_further_assistance"
        style="@style/ShakeShackTextView.BodyNormal.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_30dp"
        android:layout_marginHorizontal="@dimen/size_30dp"
        android:layout_marginTop="@dimen/size_10dp"
        android:text="@string/need_further_assistance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refund_success_section_separator" />

    <TextView
        android:id="@+id/visit_contact_us_text"
        style="@style/ShakeShackTextView.BodyNormal.Grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_30dp"
        android:layout_marginTop="@dimen/size_5dp"
        android:text="@string/visit_contact_us_info"
        android:textColorLink="@color/grey_500"
        app:layout_constraintTop_toBottomOf="@+id/need_further_assistance" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_new_order"
        style="@style/ShakeShackButton.Text.Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_30dp"
        android:layout_marginHorizontal="@dimen/size_14dp"
        android:text="@string/start_new_order"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>