<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/size_28dp">

    <ImageButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_28dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close_button_description"
        android:padding="@dimen/size_10dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/check_your_email_title"
        style="@style/ShakeShackTextView.HeadingH3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_28dp"
        android:layout_marginEnd="@dimen/size_28dp"
        android:text="@string/check_your_email_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close" />

    <TextView
        android:id="@+id/email_sent_message"
        style="@style/ShakeShackTextView.BodyNormal.Grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_28dp"
        android:layout_marginTop="@dimen/size_20dp"
        android:maxLines="2"
        android:text="@string/email_sent_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_your_email_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/close_button"
        style="@style/ShakeShackButton.Black.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_28dp"
        android:layout_marginVertical="@dimen/size_35dp"
        android:background="@drawable/btn_black_background_selector"
        android:text="@string/close"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_sent_message" />

    <TextView
        android:id="@+id/send_it_again"
        style="@style/ShakeShackTextView.BodyExtraSmall.Clickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_28dp"
        android:padding="@dimen/size_10dp"
        android:text="@string/send_it_again"
        android:textColor="@color/grey_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close_button" />
</androidx.constraintlayout.widget.ConstraintLayout>